Logo file location index.html
logo file location correction

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <div class="header">
         <div class="header-contents ">
-            <a href="../index.html"><img class="logo" src="../image/Logo.png" alt="offline"></a>
+            <a href="#home"><img class="logo" src="./image/Logo.png" alt="offline"></a>
             
             <div class="headerTextContainer">
                 <a href="../index.html" class="headerlinks">Home</a>
@@ -28,7 +28,7 @@
     </div>
 
     <!-- Hero Section -->
-    <div class="container section">
+    <div class="container section id="hero">
         <div class="img-container">
             <img class="lg-img" src="./image/Cake Collage.png" alt="Cake Collage">
             <img class="sm-img" src="./cake gallery/Cake Collage Insga 2.png" alt="">
