--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <div class="header">
         <div class="header-contents ">
-            <a href="#home"><img class="logo" src="./image/Logo.png" alt="offline"></a>
+            <a href="./index.html"><img class="logo" src="./image/Logo.png" alt="offline"></a>
             
             <div class="headerTextContainer">
                 <a href="../index.html" class="headerlinks">Home</a>
