Location of images corrected, overflow hidden

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
             <div class="footer-img-container">
                 <p class="footer-titles">Follow On Instagram</p>
                 <div class="footer-photo-gallery">
-                    <a href="https://www.instagram.com/sugarymoon_nusmi/" class="footer-img" target="_blank"><img src="../image/Footer-img.png" alt=""></a>
-                    <a href="https://www.instagram.com/sugarymoon_nusmi/" class="footer-img" target="_blank"><img src="../image/Footer-img 1.png" alt=""></a>
-                    <a href="https://www.instagram.com/sugarymoon_nusmi/" class="footer-img" target="_blank"><img src="../image/Footer-img-2.png" alt=""></a>
-                    <a href="https://www.instagram.com/sugarymoon_nusmi/" class="footer-img" target="_blank"><img src="../image/Footer-img-3.png" alt=""></a>
+                    <a href="https://www.instagram.com/sugarymoon_nusmi/" class="footer-img" target="_blank"><img src="./image/Footer-img.png" alt=""></a>
+                    <a href="https://www.instagram.com/sugarymoon_nusmi/" class="footer-img" target="_blank"><img src="./image/Footer-img 1.png" alt=""></a>
+                    <a href="https://www.instagram.com/sugarymoon_nusmi/" class="footer-img" target="_blank"><img src="./image/Footer-img-2.png" alt=""></a>
+                    <a href="https://www.instagram.com/sugarymoon_nusmi/" class="footer-img" target="_blank"><img src="./image/Footer-img-3.png" alt=""></a>
                 </div>
             </div>
             
