Changed the value for responsive

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     </div>
 
     <!-- Hero Section -->
-    <div class="container section id="hero">
+    <div class="container section">
         <div class="img-container">
             <img class="lg-img" src="./image/Cake Collage.png" alt="Cake Collage">
             <img class="sm-img" src="./cake gallery/Cake Collage Insga 2.png" alt="">
             <div class="title-btn-container">
                 <h1 class="title-text">Treat Your Taste Buds <br> With Our Yummy Bits</h1>
-                <p class="title-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit <br> phasellus mollis sit aliquam sit nullam neque ultrices.</p>
+                <p class="title-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam neque ultrices.</p>
                 <div class="btn-container">
                     <a type="button" href="./log/gallery.html" class="btn btn-outline">Gallery</a>
                     <a type="button" href="./log/reserve.html" class="btn btn-fill btn">Reserve<svg id="Arow-on" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
