--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             <h2>About Us</h2>
             <p>Discover the story of our home bakery that started during the COVID-19 era and rose to delicious fame through word-of-mouth. Learn about who we are, our passion for baking, and how we create sweet moments of magic in every confection. Explore our 'About Us' page and join us on our journey from flour to fame!"</p>
             <div class="btn-container">
-                <button type="button" class="btn btn-aboutus-gallery">Gallery</button>
-                <button type="button" class="btn btn-aboutus-learnmore">Learn More <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                <a type="button" href="./log/gallery.html" class="btn btn-aboutus-gallery">Gallery</a>
+                <a type="button" href="./log/about-us.html" class="btn btn-aboutus-learnmore">Learn More <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
                     <path d="M9.4043 2.65442L15.7499 9.00007L9.4043 15.3457" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M15.7499 9L2.25 9" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg></button>
+                  </svg></a>
             </div>
         </div>
     </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="follow-button-container">
             <a type="button" href="https://www.instagram.com/sugarymoon_nusmi/" class="btn btn-follow-us">Follow Us</a>
-            <a type="button" href="./gallery.html" class="btn btn-folllow-Gallery">Gallery</a>
+            <a type="button" href="./log/gallery.html" class="btn btn-folllow-Gallery">Gallery</a>
         </div>
     </div>
 
@@ -92,11 +92,11 @@
                 <p>Prototypes may also be exempted from some <br>requirements that will apply to the final product</p>
             </div>
             <div class="action-btn-contact">
-                <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <a href="" class="mail-link"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                     <path d="M18.3334 5.94946V14.2828C18.3334 14.8353 18.1139 15.3652 17.7232 15.7559C17.3325 16.1466 16.8026 16.3661 16.2501 16.3661H3.75008C3.19755 16.3661 2.66764 16.1466 2.27694 15.7559C1.88624 15.3652 1.66675 14.8353 1.66675 14.2828V5.94946" stroke="#43766C" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M18.3334 5.94954C18.3334 5.39701 18.1139 4.86711 17.7232 4.47641C17.3325 4.0857 16.8026 3.86621 16.2501 3.86621H3.75008C3.19755 3.86621 2.66764 4.0857 2.27694 4.47641C1.88624 4.86711 1.66675 5.39701 1.66675 5.94954L8.89591 10.4634C9.22702 10.6704 9.60962 10.7801 10.0001 10.7801C10.3905 10.7801 10.7731 10.6704 11.1042 10.4634L18.3334 5.94954Z" stroke="#43766C" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>contact@company.com</a>
-                <button type="button" class="btn contactbutton">Whatsapp</button>
+                <a type="button" href="https://wa.me/message/LELJKSM5ZVNND1" class="btn contactbutton">Whatsapp</a>
             </div>
 
         </div>
@@ -111,7 +111,7 @@
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <input class="footer-input" type="email" name="" id="" placeholder="Enter your email">
-                <button class=" btn primarybutton" type="button" >Email Us</button>
+                <button class=" btn primarybutton" type="button" >Send</button>
             </div>
            <div class="links">
             <div class="links-container">
