--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scale=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,user-scale=0">
     <title>Sugary Moon</title>
     <link rel="shortcut icon" href="./image/Logo background.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
