Fixed Vewport Issue

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,user-scale=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sugary Moon</title>
     <link rel="shortcut icon" href="./image/Logo background.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
@@ -66,7 +66,7 @@
         </div>
     </div>
     <!-- Follow Section -->
-    <div class="follow-container ">
+    <div class="follow-container container section">
         <div class="title-follow">
             <h2>Follow Us On <span class="Instagram">Instagram</span></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar <br> elementum tempus hac tellus libero accumsan.</p>
@@ -84,7 +84,7 @@
     </div>
 
     <!-- Contact Us Section -->
-    <div class="contactus-container  section">
+    <div class="contactus-container  container section">
         <img src="./image/Contact Us Cake Collage.png" alt="" srcset="">
         <div class="contact-us-action-form">
             <div class="title-text-action">
@@ -103,7 +103,7 @@
     </div>
 
     <!-- Footer Section -->
-    <div class="footer-container">
+    <div class="footer-container container ">
         <div class="footer-contents">
             <div class="mail-content-container">
                 <div class="log-footer">
