Mobile zoom issue

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Header -->
-    <div class="header">
+    <div class="header container">
         <div class="header-contents ">
             <a href="./index.html"><img class="logo" src="./image/Logo.png" alt="offline"></a>
             
@@ -152,7 +152,7 @@
     </div>
 
 
-    <div class="service">Website Under Consutruction</div>
+    <div class="service container">Website Under Consutruction</div>
 
 </body>
 </html>
