Without under construction

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
 
 
-    <div class="service container">Website Under Consutruction</div>
+    <!-- <div class="service container">Website Under Consutruction</div> -->
 
 </body>
 </html>
