Changed size, added infinite, footer modified

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sugary Moon</title>
     <link rel="shortcut icon" href="./image/Logo background.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./minified.css">
+    <link rel="stylesheet" href="./infinite-scroll.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
@@ -71,11 +72,15 @@
             <h2>Follow Us On <span class="Instagram">Instagram</span></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar <br> elementum tempus hac tellus libero accumsan.</p>
         </div>
-        <div class="follow-img-container">
-            <div class="follow-img-wrapper"><img src="./image/Image Placeholder-1.png" alt=""></div>
-            <div class="follow-img-wrapper"><img src="./image/Image Placeholder - 1.png" alt=""></div>
-            <div class="follow-img-wrapper"><img src="./image/Image Placeholder-3.png" alt=""></div>
-            <div class="follow-img-wrapper"><img src="./image/Follow-image-placeholder.png"  alt=""></div>
+        <div class="wrapper">
+            <div class="item item1"><img class="img-infinite" src="./cake gallery/image 1.png" alt=""></div>
+            <div class="item item2"><img class="img-infinite" src="./image/image 5.png" alt=""></div>
+            <div class="item item3"><img class="img-infinite" src="./image/image 3.png" alt=""></div>
+            <div class="item item4"><img class="img-infinite" src="./image/image 6.png" alt=""></div>
+            <div class="item item5"><img class="img-infinite" src="./cake gallery/image 5.png" alt=""></div>
+            <div class="item item6"><img class="img-infinite" src="./cake gallery/image 6.png" alt=""></div>
+            <div class="item item7"><img class="img-infinite" src="./cake gallery/image 9.png" alt=""></div>
+            <div class="item item8"><img class="img-infinite" src="./cake gallery/image 10.png" alt=""></div>
         </div>
         <div class="follow-button-container">
             <a type="button" href="https://www.instagram.com/sugarymoon_nusmi/" class="btn btn-follow-us">Follow Us</a>
@@ -111,7 +116,7 @@
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <input class="footer-input" type="email" name="" id="" placeholder="Enter your email">
-                <button class=" btn primarybutton" type="button" >Send</button>
+                <button class=" btn mail-submit-btn" type="button" >Send</button>
             </div>
            <div class="links">
             <div class="links-container">
