--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img class="sm-img" src="./cake gallery/Cake Collage Insga 2.png" alt="">
             <div class="title-btn-container">
                 <h1 class="title-text">Treat Your Taste Buds <br> With Our Yummy Bits</h1>
-                <p class="title-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam neque ultrices.</p>
+                <p class="title-paragraph">Delicious and diverse flavors crafted to perfection <br> experience the joy in every bite with our gourmet creations!</p>
                 <div class="btn-container">
                     <a type="button" href="./log/gallery.html" class="btn btn-outline">Gallery</a>
                     <a type="button" href="./log/reserve.html" class="btn btn-fill btn">Reserve<svg id="Arow-on" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,7 +70,7 @@
     <div class="follow-container container section">
         <div class="title-follow">
             <h2>Follow Us On <span class="Instagram">Instagram</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar <br> elementum tempus hac tellus libero accumsan.</p>
+            <p>See more of our delicious treats! Follow us on Instagram <br> for more mouth-watering images and updates!</p>
         </div>
         <div class="wrapper">
             <div class="item item1"><img class="img-infinite" src="./cake gallery/image 1.png" alt=""></div>
@@ -94,7 +94,7 @@
         <div class="contact-us-action-form">
             <div class="title-text-action">
                 <h2>Contact Us</h2>
-                <p>Prototypes may also be exempted from some <br>requirements that will apply to the final product</p>
+                <p>Interested in investing? <br> Contact us via email or WhatsApp!</p>
             </div>
             <div class="action-btn-contact">
                 <a href="" class="mail-link"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -114,7 +114,7 @@
                 <div class="log-footer">
                     <img src="../image/Logo.png" alt="">
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Treat Your Taste Buds</p>
                 <input class="footer-input" type="email" name="" id="" placeholder="Enter your email">
                 <button class=" btn mail-submit-btn" type="button" >Send</button>
             </div>
